# 27

./: .dockerignore  .e2e-wallet.json  .editorconfig  .env  .env.example  .firebaserc  .gitattributes  .gitignore  .htp-server-address.json  .mcp.json  .railway-deploy  .server-wallet.json  .vercelignore  AGENT_NOTES.md  BLOCKERS.md  BUILD_SUMMARY.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  HTP_TEST_REPORT_2026-05-05.md  LICENSE  PROGRESS.md  README-HTP.md  README.md  RUST_DOMINANCE.md  SECURITY.md  VERIFICATION_REPORT.md  WIKI.md  brute2.js  covenants.db  covenants.db-shm  covenants.db-wal  database.rules.json  deploy-direct.js  deploy-now.sh  deploy-with-servicekey.sh  deploy.sh  deployed.json  (+46 more)
.firebase/: hosting.Mjc.cache  hosting.cHVibGlj.cache
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: htp-build-sequencer.agent.md
27/: README.md  WHITEPAPER.md  dag-background.js  database.rules.json  deploy.sh  firebase-config.js  firebase.json  fix-firebase-local.py  fix-load-order.py  fix-network-detect.py  fix-network.py  fix-rpc-client.py  fix-wallet-ui.py  htp-address-sync.js  htp-apply-critical-fix.sh  htp-audit-cleanup.sh  htp-autopayout-engine.js  htp-blockdag-viz.js  htp-board-engine-fix.js  htp-board-engine.js  htp-c4-animation.js  htp-cancel-flow.js  htp-checkers-multijump.js  htp-chess-dnd.js  htp-chess-sync.js  htp-chess-ui.js  htp-covenant-escrow-v2.js  htp-critical-fix.js  htp-db-cleaner.js  htp-event-creator.js  htp-events-v3.js  htp-fee-engine.js  htp-fee-shim.js  htp-firebase-rules.json  htp-fix-all.sh  htp-fix-chess-bugs.sh  htp-games-sync.js  htp-index-rewrite.py  htp-init-rpc-patch.js  htp-init.js  (+26 more)
27/htp-rust-backend/: Cargo.toml  Dockerfile  README.md  railway.toml
27/htp-rust-backend/src/: autopayout.rs  broadcast.rs  deadline.rs  escrow.rs  fee.rs  game_ws.rs  main.rs  markets.rs  oracle.rs  oracle_commit.rs  settlement.rs  types.rs  utxo_mutex.rs  wallet.rs
backups/: LATEST_PHASE1_BACKUP
certs/: README.md
contracts/: MatchEscrow.sil
covenants/: MaximizerEscrow.ss  ParimutuelMarket.ss  SkillGame.ss  TournamentBracket.ss
crates/: Cargo.toml  tournament-engine.rs
crates/htp-covenant/: Cargo.toml  README.md
crates/htp-covenant/src/: address.rs  error.rs  lib.rs  params.rs
crates/htp-daemon/: Cargo.toml
crates/htp-daemon/src/: covenant_watcher.rs  main.rs
crates/htp-elo/: Cargo.toml
crates/htp-elo/src/: lib.rs
crates/htp-firebase-sync/: Cargo.toml
crates/htp-firebase-sync/src/: lib.rs
crates/htp-game-engine/: Cargo.toml
crates/htp-game-engine/src/: lib.rs
crates/htp-games/: Cargo.toml
crates/htp-games/src/: blackjack.rs  checkers.rs  connect4.rs  lib.rs  poker.rs  tictactoe.rs
crates/htp-oracle-node/: Cargo.toml
crates/htp-oracle-node/src/: main.rs
crates/htp-server/: Cargo.toml
crates/htp-server/src/: api_models.rs  covenant_derive.rs  covenant_id.rs  db.rs  game_blackjack.rs  game_checkers.rs  game_chess.rs  game_connect4.rs  game_poker.rs  main.rs  observability.rs  oracle.rs  proof_commit.rs  routes.rs  settlement_guard.rs  signing.rs  state.rs  ws.rs  zk_proof.rs
crates/htp-settlement/: Cargo.toml
crates/htp-settlement/src/: lib.rs
crates/htp-settler/: Cargo.toml
crates/htp-settler/src/: lib.rs  main.rs
crates/htp-settler/src/client/: mod.rs
crates/htp-settler/src/settlement/: mod.rs
crates/htp-settler/tests/: settlement_integration.rs
crates/kaspa-tn12-sighash/: Cargo.toml
crates/kaspa-tn12-sighash/src/: main.rs
crates/kdapp/: Cargo.toml
crates/kdapp/examples/: checkers.rs  connect4.rs
crates/kdapp/examples/checkers/: main.rs
crates/kdapp/examples/chess/: main.rs
crates/kdapp/examples/tictactoe/: main.rs
crates/kdapp/src/: checkers.rs  chess.rs  connect4.rs  episode.rs  lib.rs  tictactoe.rs
crates/mirofish-bridge/: Cargo.toml
crates/mirofish-bridge/src/: lib.rs
crates/silverscript/: Cargo.toml
crates/silverscript/src/: encoder.rs  error.rs  lib.rs  opcode.rs  script.rs
crates/tournament-engine/: Cargo.toml
crates/tournament-engine/src/: bracket.rs  lib.rs  pool.rs
docker/: Dockerfile.server  docker-compose.yml  nginx.conf
docs/: API.md  EXECUTION_MODEL.md  TOCCATA_PROTOCOL_LOCK.md  api-reference.md  architecture.md  attestor-node.md  covenant-design.md  deployment.md  information-markets.md  kaspa-primer.md  oracle-design.md
htp-core/: Cargo.toml
htp-core/htp-api/: Cargo.toml
htp-core/htp-api/src/: lib.rs
htp-core/htp-db/: Cargo.toml
htp-core/htp-db/src/: lib.rs
htp-core/htp-kaspa-rpc/: Cargo.toml
htp-core/htp-kaspa-rpc/src/: lib.rs
htp-daemon/: .env.example  Cargo.toml  README.md
htp-daemon/src/: deadline.rs  firebase.rs  kaspa.rs  main.rs  oracle.rs  settlement.rs  types.rs
infra/: nginx-full.conf  pm2-ecosystem.config.js
lib/: db.js  fees.js  game-manager.js  grpc-submit.js  kaspa-rpc.js  kaspa-signer.js  oracle-daemon.js  oracle-signer.js  script-validator.js  settlement.js  tx-builder.js  utxo-indexer.js
public/: app.js  blackjack-ui.js  checkers-ui.js  chess-ui.js  connect4-ui.js  firebase-config.js  firebase.json  game.html  htp-animations.js  htp-api-config.js  htp-autopayout-engine.js  htp-blockdag-viz.js  htp-board-engine.js  htp-buttons-v2.css  htp-c4-animation.js  htp-cancel-flow.js  htp-card-games-bridge.js  htp-checkers-multijump.js  htp-chess-dnd.js  htp-chess-ischeck-fix.js  htp-chess-sync.js  htp-chess-ui.js  htp-config.js  htp-covenant-escrow-v2.js  htp-covenants.js  htp-dag-bg.js  htp-demo-match.js  htp-design-system.css  htp-escrow-derive.js  htp-event-creator.js  htp-events-v3.js  htp-events.js  htp-featured-event.js  htp-fee-engine.js  htp-gamefix-sync.js  htp-games-sync.js  htp-init.js  htp-logo-data.js  htp-markets-ui.js  htp-match-deadline.js  (+44 more)
scripts/: add_mobile.py  build-rust-server.sh  clean_frontpage.py  e2e-test.js  fix_index.py  fix_mobile_ui.py  htp-monitor.sh  run-attestor-node.mjs  stress-skill-games.mjs
tests/: run-all.js  test-fees.js  test-games.js  test-scripts.js  test-settlement.js  test-validator.js
tools/claim-now/: Cargo.toml  main.rs
(+25 files in other folders)
