[workspace]
resolver = "2"
members = [
    "crates/mirofish-bridge",
    "crates/htp-daemon",
]

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
version = "0.1.0"
authors = ["High Table Protocol"]

[workspace.dependencies]
# Kaspa crates - latest versions from research
kaspa-wasm = "0.15.0"
kaspa-os = "0.13.4"
kaspa-wrpc-client = "0.15.0"
kaspa-rpc-core = "0.15.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
