[workspace]
resolver = "2"
members = [
    "htp-firebase-sync",
    "mirofish-bridge",
    "htp-daemon",
    "kaspa-tn12-sighash",
    "htp-server",
    "htp-games",
]

[workspace.package]
edition = "2021"
rust-version = "1.75.0"
version = "0.1.0"
authors = ["High Table Protocol"]

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["ws"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
kaspa-wasm = { version = "0.15", package = "kaspa-wasm" }
