[workspace]
resolver = "2"
members = [
  "htp-db",
  "htp-kaspa-rpc",
  "htp-settlement",
  "htp-game-engine",
  "htp-api",
]

[workspace.package]
edition = "2021"
version = "0.2.0"
authors = ["HTP Protocol"]
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
hex = "0.4"
sha2 = "0.10"
