[package]
name = "htp-daemon"
version = "1.0.0"
edition = "2021"
description = "High Table Protocol — Kaspa settlement + oracle daemon"

[[bin]]
name = "htp-daemon"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (Firebase REST + Kaspa REST)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Env / config
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Kaspa crypto primitives
# secp256k1 for P2PK signing (P2SH uses same curve)
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }

# SHA-256 for address derivation
sha2 = "0.10"

# BLAKE2B for P2SH script hash (Kaspa uses blake2b-256)
blake2 = "0.10"

# Hex encoding
hex = "0.4"

# Base64 (Firebase JWT auth)
base64 = "0.22"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Random (escrow keypair generation)
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
