[package]
name = "htp-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }

# Planned Kaspa SDK dependencies (require Kaspa Rust SDK build environment):
# kaspa-rpc-client = { version = "0.15" }
# kaspa-wallet-core = { version = "0.15" }
# kaspa-consensus-core = { version = "0.15" }
# kaspa-txscript = { version = "0.15" }
# kaspa-bip32 = { version = "0.15" }
