[package]
name = "htp-rust-backend"
version = "0.6.0"
edition = "2021"
description = "High Table Protocol — full Rust backend: wallet, escrow, fee, settlement, deadline, oracle, markets, autopayout, WebSocket game relay"

[[bin]]
name = "htp-backend"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
axum         = { version = "0.7",  features = ["macros", "ws"] }
tower-http   = { version = "0.5",  features = ["cors"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
reqwest      = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
secp256k1    = { version = "0.29", features = ["rand", "global-context"] }
sha2         = "0.10"
blake2       = "0.10"
hmac         = "0.12"
hex          = "0.4"
bip39        = "2"
once_cell    = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow       = "1"
thiserror    = "1"
dotenvy      = "0.15"
chrono       = { version = "0.4",  features = ["serde"] }
rand         = "0.8"
base64       = "0.22"

# Chess engine — full shakmaty for /oracle/chess
# shakmaty = "0.27"

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
