[package]
name = "htp-covenant"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Derives deterministic P2SH covenant addresses from MatchEscrow parameters"

[dependencies]
silverscript = { path = "../silverscript" }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bech32 = "0.9"
ripemd = "0.1"

[dev-dependencies]
hex = { workspace = true }
