[package]
name = "htp-daemon"
version.workspace = true
edition = "2024"
rust-version = "1.88.0"
authors.workspace = true
description = "High Table Protocol Daemon for Kaspa TN12"

[[bin]]
name = "htp-daemon"
path = "src/main.rs"

[dependencies]
# Local dependencies
mirofish-bridge = { path = "../mirofish-bridge" }

# Kaspa crates - latest versions from research
kaspa-wasm = { workspace = true }

# Async runtime with filesystem utilities
tokio = { workspace = true, features = ["fs"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Timestamps
chrono = "0.4"
