[package]
name = "htp-firebase-sync"
version.workspace = true
edition.workspace = true
description = "HTP Firebase sync bridge — writes match outcomes, reads active matches"

[dependencies]
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
