[package]
name = "htp-oracle-node"
version = "0.1.0"
edition = "2021"
description = "HTP Oracle Node — run alongside kaspad on TN12. Fetch URL, evaluate condition, sign outcome, submit attestation."

[[bin]]
name = "htp-oracle-node"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
secp256k1 = { version = "0.28", features = ["rand", "hashes", "global-context"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
