[package]
name = "htp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "High Table Protocol Axum HTTP/WS server"

[[bin]]
name = "htp-server"
path = "src/main.rs"

[dependencies]
htp-games = { path = "../htp-games" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
shakmaty = { workspace = true }
dashmap = "6"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
dotenvy = "0.15"
