[package]
name = "htp-settler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Auto-settlement daemon for HTP Protocol events"

[[bin]]
name = "htp-settler"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
