[package]
name = "kaspa-tn12-sighash"
version = "0.1.0"
edition = "2021"
description = "Correct Kaspa TN12 sighash implementation (hash-of-hashes, SigHashAll)"

[[bin]]
name = "kaspa-tn12-sighash"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
