[package]
name = "kdapp"
version = "0.1.0"
edition = "2021"
description = "High Table Protocol - Kaspa dApp Episodes (skill-game engines for on-chain play)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[example]]
name = "tictactoe"
path = "examples/tictactoe/main.rs"

[[example]]
name = "connect4"
path = "examples/connect4/main.rs"

[[example]]
name = "checkers"
path = "examples/checkers/main.rs"

[[example]]
name = "chess"
path = "examples/chess/main.rs"
