[package]
name = "mirofish-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "MiroFish image generation bridge for High Table Protocol"

[dependencies]
# HTTP client for MiroFish API
reqwest = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
