[package]
name = "htp-api"
version.workspace = true
edition.workspace = true
description = "HTP API — Axum HTTP/WS routes connecting all crates"

[dependencies]
htp-db = { path = "../htp-db" }
htp-kaspa-rpc = { path = "../htp-kaspa-rpc" }
htp-settlement = { path = "../htp-settlement" }
htp-game-engine = { path = "../htp-game-engine" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
