[package]
name = "htp-claim-now"
version = "1.0.0"
edition = "2021"
description = "High Table Protocol – Permissionless claim tool for HTP markets"

[[bin]]
name = "claim-now"
path = "main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
